--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "moment": "^2.29.3",
     "prettier": "^2.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
