--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "faker": "^5.5.3",
     "moment": "^2.29.3",
     "prettier": "^2.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-safe-area-context": "^4.2.5",
-    "react-native-screens": "^3.13.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.1",
     "redux-devtools-extension": "^2.13.9",
