--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-optimize": "^0.2.16",
     "expo-status-bar": "~1.3.0",
     "faker": "^5.5.3",
     "moment": "^2.29.3",
@@ -21,12 +22,14 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-fast-image": "^8.5.11",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "sharp-cli": "^1.15.0",
     "webpack-dev-server": "~3.11.0"
   },
   "devDependencies": {
