--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,19 @@
 {
-  "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true,
-    "allowSyntheticDefaultImports": true
-  }
+    "target": "es5",
+    "module": "*.png",
+    "moduleResolution": "node",
+    "noImplicitAny": false,
+    "removeComments": false,
+    "preserveConstEnums": true,
+    "sourceMap": true,
+    "outDir": "dist",
+    "allowSyntheticDefaultImports": true,
+    "jsx": "react"
+  },
+  "exclude": [
+    "dist",
+    "node_modules"
+  ],
+  "extends": "expo/tsconfig.base"
 }
