--- a/package.json
+++ b/package.json
@@ -12,21 +12,25 @@
   "dependencies": {
     "@expo/webpack-config": "~0.16.2",
     "@reduxjs/toolkit": "^1.8.1",
+    "@types/react-native-dotenv": "^0.2.0",
     "axios": "^0.27.2",
-    "expo": "~45.0.0",
+    "expo": "~44.0.1",
     "expo-optimize": "^0.2.16",
-    "expo-status-bar": "~1.3.0",
+    "expo-status-bar": "~1.0.4",
     "faker": "^5.5.3",
-    "moment": "^2.29.3",
+    "foo": "^0.0.7",
+    "moment": "^2.29.1",
     "prettier": "^2.6.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react": "^18.1.0",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-config": "^1.4.5",
+    "react-native-dotenv": "^3.1.1",
     "react-native-fast-image": "^8.5.11",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7",
-    "react-redux": "^8.0.1",
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.8",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "sharp-cli": "^1.15.0",
