--- a/package.json
+++ b/package.json
@@ -14,22 +14,25 @@
     "@reduxjs/toolkit": "^1.8.1",
     "@types/react-native-dotenv": "^0.2.0",
     "axios": "^0.27.2",
-    "expo": "~44.0.1",
+    "expo": "~45.0.0",
+    "expo-cli": "^5.4.9",
     "expo-optimize": "^0.2.16",
-    "expo-status-bar": "~1.0.4",
+    "expo-status-bar": "~1.3.0",
     "faker": "^5.5.3",
     "foo": "^0.0.7",
+    "fs": "^0.0.1-security",
     "moment": "^2.29.1",
+    "native": "^0.3.3",
     "prettier": "^2.6.2",
-    "react": "^18.1.0",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "^0.68.2",
     "react-native-config": "^1.4.5",
-    "react-native-dotenv": "^3.1.1",
+    "react-native-dotenv": "^3.3.1",
     "react-native-fast-image": "^8.5.11",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "0.17.7",
     "react-redux": "^7.2.8",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
@@ -38,14 +41,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/preset-react": "^7.17.12",
     "@react-navigation/native": "^6.0.10",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.66.13",
+    "@types/react-native": "^0.67.8",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.15.0",
     "eslint-plugin-react": "^7.29.4",
-    "prettier": "prettier",
     "typescript": "~4.3.5"
   },
   "private": true
